--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'com.google.android.material:material:1.4.0'
-
+    implementation project(':plugin-installSDK')
 }
