--- a/plugin-installSDK/build.gradle
+++ b/plugin-installSDK/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -32,20 +32,53 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
 
 
 task makeJar(type: Copy) {
-    delete 'build/libs/installsdk.jar'
-    from('build/intermediates/packaged-classes/release/')
+    delete 'build/libs/installsdk-1.0.3.jar'
+    from('build/intermediates/packaged-classes/aar_main_jar/release/')
     into('build/libs/')
     include('classes.jar')
-    rename('classes.jar', 'installsdk.jar')
+    rename('classes.jar', 'installsdk-1.0.3.jar')
 }
-makeJar.dependsOn(build)
+
+tasks.whenTaskAdded { task ->
+    if (task.name == 'assembleRelease') {
+        task.finalizedBy(makeJar)
+    }
+}
+
+
+
+
+// Task to generate JAR from compiled classes
+//task exportJar(type: ZIP) {
+//    from 'build/intermediates/compile_library_classes/release/out'
+//    include '**/*.class'
+//    archiveClassifier.set('')
+//    into 'plugin-installSDK/libs'
+//    rename { fileName -> 'installsdk-1.0.3.jar' }
+//
+//    destinationDir = file("$buildDir/libs")
+//    archiveBaseName.set('installsdk-1.0.3')
+//    archiveExtension.set('jar')
+//}
+
+
+task exportJar(type: Copy) {
+    from 'build/intermediates/compile_library_classes/release/out'
+    include '**/*.class'
+    into 'plugin-installSDK/libs'
+    rename { fileName -> 'MyLibrary.jar' }
+
+}
+
+// Ensure the exportJar task runs after the library is assembled
+tasks.whenTaskAdded { task ->
+    if (task.name == 'assembleRelease') {
+        task.finalizedBy(exportJar)
+    }
+}
