--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,6 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=false
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.9.1-bin.zip
+org.gradle.offline=false
+
 
