--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,5 +31,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'com.google.android.material:material:1.4.0'
-    implementation project(':plugin-installSDK')
+    implementation files('libs\\InstallSDK-1.0.9.jar')
+//    implementation project(':plugin-installSDK')
 }
