--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'com.google.android.material:material:1.4.0'
-    implementation files('libs\\InstallSDK-1.0.9.jar')
+//    implementation files('libs\\InstallSDK-1.0.9.jar')
     implementation project(':plugin-installSDK')
 }
